# parse-1c-build

./: .coveragerc  .gitignore  .travis.yml  README.md  compiler.py  decompiler-1c-wrapper.ini.sample  decompiler.py  decompiler1cwrapper.ini.sample  decompiler1cwrapper.py  generic.py  main.py  parse_1c_build.py  pyproject.toml  requirements.txt  settings.ini.sample  settings.yaml.sample  setup.py
.github/workflows/: main.yml  publish.yml
decompiler1cwrapper/: __init__.py  compiler.py  decompiler.py  generic.py  main.py
parse_1c_build/: __about__.py  __init__.py  __main__.py  base.py  build.py  cli.py  compat.py  core.py  parse.py
src/parse_1c_build/: __about__.py  __main__.py  base.py  build.py  cli.py  core.py  parse.py
tests/: test_base.py  test_build.py  test_parse.py  tests_.py  tests_build.py  tests_parse.py
tests/data/: test.epf  test.erf
tests/data/test_epf_src/: renames.txt
tests/data/test_epf_src/und/: 899371e7-3efb-46bf-940e-a47cd76913cd  root  versions
