[tool.poetry]
authors = ["Cujoko <cujoko@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
description = "Parse and build utilities for 1C:Enterprise"
keywords = ["1c", "parse", "build", "v8reader", "v8unpack", "gcomp"]
license = "MIT"
name = "parse-1c-build"
packages = [{include = "parse_1c_build"}]
readme = "README.md"
repository = "https://github.com/Cujoko/parse-1c-build"
version = "5.15.1"

[tool.poetry.scripts]
p1cb = "parse_1c_build.__main__:run"

[tool.poetry.dependencies]
cjk-commons = "^3.6.2"
commons-1c = "^3.6.1"
loguru = "^0.6.0"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
pytest = "^7.2.1"
rope = "^1.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
