[tool.pdm]

[project]
authors = [
    {name = "Cujoko", email = "cujoko@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
dependencies = [
    "cjk-commons==3.6.3",
    "commons-1c==3.6.3",
    "loguru==0.6.0",
]
description = "Parse and build utilities for 1C:Enterprise"
keywords = ["1c", "parse", "build", "v8reader", "v8unpack", "gcomp"]
license = {text = "MIT"}
name = "parse-1c-build"
readme = "README.md"
requires-python = ">=3.10"
version = "5.15.2"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
p1cb = "parse_1c_build.__main__:run"
